// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agents reducers create agent 1`] = `
{
  "all": [
    {
      "id": 1,
      "name": "Romain",
    },
  ],
  "messageFeedbackStatus": {},
  "pagination": [],
}
`;

exports[`agents reducers delete agent 1`] = `
{
  "agents": [
    {
      "id": 1,
      "name": "Romain",
    },
    {
      "id": 2,
      "name": "John",
    },
  ],
  "all": [],
  "messageFeedbackStatus": {},
  "pagination": [],
}
`;

exports[`agents reducers fetch users (agents) 1`] = `
Immutable.Map {
  "all": Immutable.List [],
  "pagination": Immutable.List [],
  "messageFeedbackStatus": Immutable.Map {},
}
`;

exports[`agents reducers fetch users (agents) 2`] = `
Immutable.Map {
  "all": Immutable.List [],
  "pagination": Immutable.List [],
  "messageFeedbackStatus": Immutable.Map {},
}
`;

exports[`agents reducers fetch users (agents) 3`] = `
Immutable.Map {
  "all": Immutable.List [
    Immutable.Map {
      "id": 1,
    },
    Immutable.Map {
      "id": 2,
    },
  ],
  "pagination": Immutable.List [],
  "messageFeedbackStatus": Immutable.Map {},
}
`;

exports[`agents reducers should update the matching row in the list of agents when the current user is updated 1`] = `
{
  "all": [
    {
      "id": 1,
      "name": "Alex",
    },
    {
      "id": 2,
      "name": "John",
    },
  ],
  "messageFeedbackStatus": {},
  "pagination": [],
}
`;

exports[`agents reducers should update the matching row in the list of agents when the current user is updated 2`] = `
{
  "all": [
    {
      "id": 1,
      "name": "Romain",
    },
    {
      "id": 2,
      "name": "John",
    },
  ],
  "messageFeedbackStatus": {},
  "pagination": [],
}
`;

exports[`agents reducers update agent 1`] = `
{
  "all": [
    {
      "id": 1,
      "name": "Romain",
    },
    {
      "id": 2,
      "name": "John",
    },
  ],
  "messageFeedbackStatus": {},
  "pagination": [],
}
`;

exports[`agents reducers update agent 2`] = `
{
  "all": [
    {
      "id": 1,
      "name": "Romain",
    },
    {
      "id": 2,
      "name": "John",
    },
  ],
  "messageFeedbackStatus": {},
  "pagination": [],
}
`;
